# infra-hub

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  infra-hub.md
backend/: .env.example  README.md  config.py  infra_docker.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: containers.py  health.py  services_api.py
backend/app/api/routes/services/: __init__.py  minio.py  mongodb.py  postgres.py  qdrant.py  redis.py
backend/app/core/: config.py  docker.py  registry.py
backend/app/schemas/: __init__.py  container.py  service.py
backend/app/services/: __init__.py  base.py  minio.py  mongodb.py  postgres.py  qdrant.py  redis.py
backend/routers/: auth.py  health.py  services.py
backend/services/: __init__.py  auth.py  base.py  minio.py  mongodb.py  postgres.py  qdrant.py  redis.py  user_db.py
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  (+4 more)
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: index.ts  useDeepServices.ts  useServices.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ContainersPage.tsx  DashboardPage.tsx  LoginPage.tsx  MinIOPage.tsx  MongoDBPage.tsx  PostgresPage.tsx  QdrantPage.tsx  RedisPage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx  index.ts
services/minio/: .gitkeep
services/mongodb/: init-mongo.js
services/postgres/: init.sql
services/qdrant/: .gitkeep
services/redis/: .gitkeep
(+1 files in other folders)
