[project]
name = "infra-hub-backend"
version = "0.1.0"
description = "Centralized Infrastructure Management Platform - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "qdrant-client>=1.7.0",
    "minio>=7.2.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "pyjwt>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
